; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/sys/extr_bta_sys_conn.c_bta_sys_busy.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/sys/extr_bta_sys_conn.c_bta_sys_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)* }

@bta_sys_cb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@BTA_SYS_CONN_BUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_sys_busy(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_sys_cb, i32 0, i32 1), align 8
  %8 = icmp ne i32 (i32, i32, i32, i32)* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %3
  %10 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_sys_cb, i32 0, i32 1), align 8
  %11 = load i32, i32* @BTA_SYS_CONN_BUSY, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 %10(i32 %11, i32 %12, i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %9, %3
  %17 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_sys_cb, i32 0, i32 0), align 8
  %18 = icmp ne i32 (i32, i32, i32, i32)* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %16
  %20 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bta_sys_cb, i32 0, i32 0), align 8
  %21 = load i32, i32* @BTA_SYS_CONN_BUSY, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 %20(i32 %21, i32 %22, i32 %23, i32 %24)
  br label %26

26:                                               ; preds = %19, %16
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
